// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlledInput Snapshots should match snapshot for form 1`] = `
<RCTView
  ref={null}
>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#1C1917",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Email
      </RCTText>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FAFAF9",
            "borderColor": "#E7E5E4",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Email"
          accessibilityRole="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter email"
          placeholderTextColor="#A8A29E"
          ref={null}
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1C1917",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="email-input"
          value=""
        />
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#1C1917",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Password
      </RCTText>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FAFAF9",
            "borderColor": "#E7E5E4",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTText
          color="#A8A29E"
          name="lock-outline"
          ref={null}
          size={20}
          style={
            {
              "marginRight": 12,
            }
          }
          testID="RCTText"
        >
          lock-outline
        </RCTText>
        <RCTTextInput
          accessibilityLabel="Password"
          accessibilityRole="none"
          autoCapitalize="none"
          autoCorrect={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter password"
          placeholderTextColor="#A8A29E"
          ref={null}
          secureTextEntry={true}
          style={
            [
              {
                "color": "#1C1917",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              {
                "paddingLeft": 0,
              },
              {
                "paddingRight": 0,
              },
            ]
          }
          testID="password-input"
          value=""
        />
        <RCTTouchableOpacity
          accessibilityLabel="Show password"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          aria-label="Show password"
          hitSlop={
            {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onPress={[Function]}
          ref={null}
          style={
            {
              "marginLeft": 12,
              "padding": 4,
            }
          }
        >
          <RCTText
            color="#A8A29E"
            name="eye"
            ref={null}
            size={20}
            testID="RCTText"
          >
            eye
          </RCTText>
        </RCTTouchableOpacity>
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#1C1917",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Username
      </RCTText>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FAFAF9",
            "borderColor": "#E7E5E4",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Username"
          accessibilityRole="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter username"
          placeholderTextColor="#A8A29E"
          ref={null}
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1C1917",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="username-input"
          value=""
        />
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#1C1917",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Bio
      </RCTText>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FAFAF9",
            "borderColor": "#E7E5E4",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Bio"
          accessibilityRole="none"
          multiline={true}
          numberOfLines={4}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Tell us about yourself"
          placeholderTextColor="#A8A29E"
          ref={null}
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1C1917",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="bio-input"
          value=""
        />
      </RCTView>
    </RCTView>
  </RCTView>
</RCTView>
`;

exports[`ControlledInput Snapshots should match snapshot with values 1`] = `
<RCTView
  ref={null}
>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#1C1917",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Email
      </RCTText>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FAFAF9",
            "borderColor": "#E7E5E4",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Email"
          accessibilityRole="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter email"
          placeholderTextColor="#A8A29E"
          ref={null}
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1C1917",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="email-input"
          value="test@example.com"
        />
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#1C1917",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Password
      </RCTText>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FAFAF9",
            "borderColor": "#E7E5E4",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTText
          color="#A8A29E"
          name="lock-outline"
          ref={null}
          size={20}
          style={
            {
              "marginRight": 12,
            }
          }
          testID="RCTText"
        >
          lock-outline
        </RCTText>
        <RCTTextInput
          accessibilityLabel="Password"
          accessibilityRole="none"
          autoCapitalize="none"
          autoCorrect={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter password"
          placeholderTextColor="#A8A29E"
          ref={null}
          secureTextEntry={true}
          style={
            [
              {
                "color": "#1C1917",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              {
                "paddingLeft": 0,
              },
              {
                "paddingRight": 0,
              },
            ]
          }
          testID="password-input"
          value=""
        />
        <RCTTouchableOpacity
          accessibilityLabel="Show password"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          accessible={true}
          aria-label="Show password"
          hitSlop={
            {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onPress={[Function]}
          ref={null}
          style={
            {
              "marginLeft": 12,
              "padding": 4,
            }
          }
        >
          <RCTText
            color="#A8A29E"
            name="eye"
            ref={null}
            size={20}
            testID="RCTText"
          >
            eye
          </RCTText>
        </RCTTouchableOpacity>
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#1C1917",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Username
      </RCTText>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FAFAF9",
            "borderColor": "#E7E5E4",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Username"
          accessibilityRole="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter username"
          placeholderTextColor="#A8A29E"
          ref={null}
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1C1917",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="username-input"
          value="testuser"
        />
      </RCTView>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
  >
    <RCTView
      ref={null}
      style={
        {
          "marginBottom": 16,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "color": "#1C1917",
            "fontSize": 14,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
        testID="RCTText"
      >
        Bio
      </RCTText>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FAFAF9",
            "borderColor": "#E7E5E4",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "paddingHorizontal": 16,
          }
        }
      >
        <RCTTextInput
          accessibilityLabel="Bio"
          accessibilityRole="none"
          multiline={true}
          numberOfLines={4}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Tell us about yourself"
          placeholderTextColor="#A8A29E"
          ref={null}
          secureTextEntry={false}
          style={
            [
              {
                "color": "#1C1917",
                "flex": 1,
                "fontSize": 16,
                "paddingVertical": 0,
              },
              undefined,
              false,
            ]
          }
          testID="bio-input"
          value="Hello world"
        />
      </RCTView>
    </RCTView>
  </RCTView>
</RCTView>
`;
